# auth_platform

./: .gitignore  AGENTS.md  AUTH_PLATFORM_PLAN.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_IMPLEMENTATION_NOTES.md  Makefile  README.md  auth-platform-plan.jsx  docker-compose.yml  netsuite1.css  netsuite2.css  test.html  vault-init.sh
backend/: .env.example  .gitignore  CLAUDE.md  Cargo.toml
backend/migrations/postgres/: 20240101000001_initial.sql  20240621000001_add_saml_providers.sql  20240621000002_add_oauth_provider.sql  20240622000001_add_user_role_scope.sql  20240622000002_add_jwt_keys.sql  20240623000001_add_soft_delete_gdpr.sql
backend/migrations/sqlite/: 20240101000001_initial.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  utils.rs
backend/src/middleware/: auth.rs  csp.rs  csrf.rs  mod.rs  rate_limit.rs  session.rs  validation.rs
backend/src/models/: audit.rs  authorization_code.rs  base.rs  config.rs  mod.rs  oauth.rs  oauth_app.rs  role.rs  saml.rs  session.rs  token.rs  user.rs
backend/src/repositories/: audit.rs  authorization_code.rs  base.rs  config.rs  mfa.rs  mod.rs  oauth.rs  oauth_app.rs  permission.rs  role.rs  saml.rs  session.rs  token.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  config.rs  mod.rs  oauth.rs  oauth_apps.rs  oauth_provider.rs  permissions.rs  roles.rs  saml.rs  users.rs
backend/src/services/: admin.rs  audit.rs  auth.rs  config.rs  email.rs  gdpr.rs  mfa.rs  mod.rs  oauth.rs  oauth_apps.rs  oauth_provider.rs  rbac.rs  saml.rs  session.rs
backend/src/vault/: hashicorp.rs  local.rs  mod.rs
backend/tests/integration/: admin_test.rs  auth_test.rs  helpers.rs  main.rs  oauth_provider_test.rs
frontend/: .gitignore  README.MD  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/e2e/: auth.spec.ts  navigation.spec.ts
frontend/src/app/: emotion-registry.tsx  error.tsx  layout.tsx  providers.tsx
frontend/src/app/(dashboard)/: error.tsx  layout.tsx  page.tsx
frontend/src/app/(dashboard)/audit-logs/: page.tsx
frontend/src/app/(dashboard)/forbidden/: page.tsx
frontend/src/app/(dashboard)/oauth-apps/: page.tsx
frontend/src/app/(dashboard)/permissions/: page.tsx
frontend/src/app/(dashboard)/profile/: page.tsx
frontend/src/app/(dashboard)/roles/: page.tsx
frontend/src/app/audit-logs/: layout.tsx  page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/mfa/: page.tsx
frontend/src/app/permissions/: layout.tsx  page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/app/roles/: layout.tsx  page.tsx
frontend/src/app/settings/: layout.tsx  page.tsx
frontend/src/app/users/: layout.tsx  page.tsx
frontend/src/app/verify-email/: page.tsx
frontend/src/components/admin/: role-editor.tsx
frontend/src/components/auth/: auth-shell.tsx  forgot-password-form.tsx  login-form.tsx  mfa-form.tsx  register-form.tsx  reset-password-form.tsx  verify-email-view.tsx
frontend/src/components/auth-page/: index.tsx
frontend/src/components/breadcrumb/: index.tsx
frontend/src/components/layout/: header.tsx  index.tsx  protected-layout.tsx
frontend/src/components/menu/: index.tsx
frontend/src/components/ui/: action-row.tsx  audit-timeline.tsx  badges.tsx  bulk-action-bar.tsx  button.tsx  cards.tsx  chips.tsx  code-block.tsx  confirm-dialog.tsx  copy-button.tsx  danger-zone.tsx  data-table.tsx  date-range-filter.tsx  detail-grid.tsx  field-group.tsx  filter-bar.tsx  form-section.tsx  form.tsx  icon-button.tsx  index.ts  inline-alert.tsx  key-value-list.tsx  loader.tsx  page-header.tsx  page-tabs.tsx  password-strength-meter.tsx  permission-matrix.tsx  record-header.tsx  row-actions-menu.tsx  search-input.tsx  secret-field.tsx  skeleton.tsx  state.tsx  status-dot.tsx  stepper-panel.tsx  surface-card.tsx  table-column-header.tsx  tabs.tsx  time.tsx  toolbar.tsx  (+2 more)
frontend/src/lib/: admin-types.ts  api-types.ts  auth-api.test.ts  auth-api.ts  i18n.test.tsx  i18n.tsx  request.ts  translations.test.ts  translations.ts
frontend/src/providers/auth-provider/: auth-provider.client.ts  auth-provider.server.ts
frontend/src/providers/data-provider/: index.ts
frontend/src/styles/: global.css
(+17 files in other folders)
